Illustration Glossary: Center the illustration since multiple tabs can prevent the width form being small enough for default width on narrow images

--- a/student/src/main/webapp/Shared/CSS/Universal/items.css
+++ b/student/src/main/webapp/Shared/CSS/Universal/items.css
@@ -872,6 +872,13 @@ div.toolsContainer a.itemMenu {
 	border-top: none;
 	background-color: #fff;
 }
+
+/* center a wordlist illustration glossary image */
+#wordListPanel .bd .yui-content img {
+	display: block;
+	margin: 0 auto;
+}
+
 .TDS_CCInvert #wordListPanel .yui-content {
 	background-color: #000;
 }
